sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:15: error: ')' expected but '}' found.
    }else if (i<dbtRouge && getCouleur(i)==ROUGE){
    ^DutchFlagAlgo:15: error: ';' expected but 'else' found.
    }else if (i<dbtRouge && getCouleur(i)==ROUGE){
     ^DutchFlagAlgo:58: error: Unmatched closing brace '}' ignored here
}
^